--- a/31.Media-Queries/style.css
+++ b/31.Media-Queries/style.css
@@ -23,6 +23,6 @@ body{
         background-color: blue;
     }
     div::after{
-        content: Large device;
+        content: large device;
     }
 }
