--- a/8Verticule Navbar/style.css
+++ b/8Verticule Navbar/style.css
@@ -24,7 +24,7 @@
 /* index-3.HTML Style Work Start */
 
 .navbar{
-    width: 100%;
+    /* width: 100%; */
 }
 .unorder-list{
     background-color: black;
