--- a/10.OUTLINE/style.css
+++ b/10.OUTLINE/style.css
@@ -3,12 +3,12 @@
     padding: 0px;
 }
 .wrapper{
-    /* margin: 50px auto; */
+    margin: 50px auto;
     width: 800px;
 }
 .main{
     width: 800px;
-    /* float: left; */
+    float: left;
 }
 img{
     width: 200px;
