--- a/19.Verticul-nab-bar/style.css
+++ b/19.Verticul-nab-bar/style.css
@@ -31,7 +31,7 @@ li{
     list-style: none;
 }
 .dropdown{
-    position: relative;
+    /* position: relative; */
     /* display: inline-block; */
 }
 .dropdown-content{
