--- a/22.Color-Keywordes/style.css
+++ b/22.Color-Keywordes/style.css
@@ -11,6 +11,9 @@
 }
 .box:hover{
     border: 20px solid rgb(170, 230, 127);
+    color: #fff;
+    line-height: 25px;
+    text-decoration: line-through;
 }
 .box-two{
     width: 300px;
@@ -22,6 +25,6 @@
 }
 .box-two:hover{
     background-color: rgb(0, 128, 255);
-    border: 10px solid red;
-    color: red;
+    border: 10px solid rgb(14, 91, 101);
+    color: #78d378;
 }
