--- a/23.Box-Shadow/style.css
+++ b/23.Box-Shadow/style.css
@@ -8,3 +8,11 @@
     border-radius: 10px;
     box-shadow: 4px 6px 5px 9px red;
 }
+.box:hover{
+    background-color: tan;
+    border-radius: 10px;
+    border: 6px solid violet;
+    line-height: 20px;
+    box-shadow: -2px 8px 13px 12px green;
+    color: #fff;
+}
