--- a/25.Css Math-function/style.css
+++ b/25.Css Math-function/style.css
@@ -3,5 +3,5 @@ div{
     /* width: calc(100% - 20%); */
     /* width: calc(20% * 4); */
     /* width: max(100% , 300px); */
-    width: min(100% , 900px);
+    /* width: min(100% , 900px); */
 }
