--- a/7.Navbar Horizontale/2style.css
+++ b/7.Navbar Horizontale/2style.css
@@ -16,14 +16,14 @@ nav{
 .item{
     display: flex;
     justify-content: space-between;
-    /* padding: 5px 20px; */
     padding-left: 0px;
 }
 a{
     text-decoration: none;
-    background-color: aqua;
+    background-color: #a5eeee;
     padding: 10px 30px;
     border-radius: 19px;
+    color: #858a47;
 }
 li{
     list-style: none;
@@ -31,4 +31,5 @@ li{
 a:hover{
     background-color: blueviolet;
     color: red;
-}
+} 
+
