--- a/33.Flexbox/style.css
+++ b/33.Flexbox/style.css
@@ -3,8 +3,8 @@
     border: 2px solid black;
     height: 300px;
     /* flex-direction: row-reverse; */
-    flex-direction: column;
-    flex-direction: column-reverse;
+    /* flex-direction: column; */
+    /* flex-direction: column-reverse; */
     /* flex-wrap: wrap; */
     /* flex-wrap: nowrap; */
     /* flex-wrap: wrap-reverse; */
@@ -12,10 +12,10 @@
     /* justify-content: space-around; */
     /* justify-content: space-between; */
     /* justify-content: space-evenly; */
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     /* padding: 10px 0px 10px 0px; */
-    gap: 10px;
+    /* gap: 10px; */
     /* row-gap: 50px; */
     /* column-gap: 10px; */
     /* align-items: stretch; */
