--- a/3Float/style.css
+++ b/3Float/style.css
@@ -1,13 +1,34 @@
-.one{
+.box-1-image-1{
     width: 300px;
     height: 300px;
-    /* float: right; */
+    float: right;
     float: inline-end;
    
 }
-.two{
+.box-1-image-2{
     width: 300px;
     height: 300px;
-    /* float: left; */
+    float: left;
+    float: inline-start;
+}
+
+.box{
+    max-width: 800px;
+    max-height: 800px;
+    background-color: aliceblue;
+    border: 1px solid;
+    overflow: scroll;
+    margin-top: 30px;
+}
+.box h1{
+    text-align: center;
+    color: hotpink;
+}
+.one{
+    width: 200px;
+    float: inline-end;
+}
+.two{
+    width: 200px;
     float: inline-start;
 }
